			   XPCE ChangeLog
			   ==============

* FIXED/MODIFIED: `graphical <-{above,below,left,right}' now tell the
  object I'm above, ... rather then *who is* above, ...  This makes
  send(X, below, Y) and get(X, below, Y) behave consistently.  More
  important, we can now destroy a dialog item in the middle of a
  (for example) vertical stack:

  cut(Me) :-
	get(Me, device, Dev),
  	(   get(Me, above, UnderMe),
	    get(Me, below, OverMe),
	    UnderMe \== @nil, OverMe \== @nil
	->  send(Me, destroy),
	    send(UnderMe, below, OverMe)
	;   send(Me, destroy)
	),
	send(Dev, layout_dialog).

  This used not to work for a rather obscure technical reason.  It is
  anticipated there is very few usercode that will be broken by this
  change.

* FIXED: Bug in allocation _debugging_, causing problems on machines
  with signed characters.

* FIXED: Added a few more sanity checks to reading gif files.

* FIXED: Properly handle resource context in class_variable declarations.

* ADDED: PceEmacs: menu to super-class field of :- pce_begin_class/[2,3]
  to allow switching to the class.

* FIXED: Error handling default file in finder on Windows.

* FIXED: Metafile handling in PceDraw (proper detection of win_metafile
  and win_printer classes).

* FIXED: Work around IE 5.5 bug in javascript cookie handling for
  library(http/html_hierarchy).

* FIXED: Editor->geometry problem with h = @default, introduced with the
  patch handling very small editors.  Shows up with GUI tracer making the
  binding and source window smaller each action.

VERSION 5.1.8#2, distributed with SWI-Prolog 4.0.9#2
====================================================

* FIXED: `event<-key' to distinguish between RETURN and Control-M as well
  as TAB and Control-I.  Also fixed detection of control-key in Windows,
  detected by Paul Holmes-Higgin.

* FIXED: Class editor to handle editors with very small height (notably
  1 line or less) properly.  Reported by Paul Holmes-Higgin.
